--- a/webshop/src/css/MaintainProducts.module.css
+++ b/webshop/src/css/MaintainProducts.module.css
@@ -13,10 +13,18 @@ tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
-img {
+.picture {
   width: 100px;
 }
 
-button {
+/* button {
   margin-right: 5px;
+} */
+
+.active {
+  background-color: rgb(234, 241, 234);
+}
+
+.inactive {
+  background-color: rgb(227, 209, 209) !important;
 }
